# elite_neopixel_matrix_suite

./: CMakeLists.txt  README.md  elite_display_settings_presets.h  elite_sprite_gpt.h  partitions.csv  sdkconfig  sdkconfig.old  todos.txt
components/joltwallet__littlefs/: .component_hash  idf_component.yml
components/joltwallet__littlefs/src/: esp_littlefs.c
elite_components/: elite.h
elite_components/elite_display/: elite_display.h  elite_display_settings_presets.h  elite_led_driver.h  monster.h
elite_components/elite_io/: elite_io.h
elite_components/elite_nn/: elite_nn.h
elite_components/elite_pixel_applications/elite_fireworks/: elite_fireworks.h
elite_components/elite_pixel_applications/elite_matrix_rain/: bug.h  elite_glyphs.h  elite_matrix_rain.h  elite_matrix_rain_.h  elite_matrix_rain_bug.h
elite_components/elite_pixel_game_ente/: elite_colors.h  elite_particle.h  elite_pixel_formats.h  elite_pixel_game_ente.h  elite_sprites.h
elite_components/elite_shell/: elite_shell.h  spritegetter.h  tcp_server.h
logging-server/: elite_logger.py
main/: CMakeLists.txt  Kconfig.projbuild  defines.h  elite.h  elite_particle.h  elite_pixel_game_ente.h  elite_rain.h  elite_shell.h  idf_component.yml  main.c  main.c_  main.h  monster.h  mr_display.h  spritegetter.h  tcp_server.h  tsoding.h
pixel_applications/: elite_pixel_app_template.h  elite_rain.h  elite_spriteshow.h  elite_spriteshow_assets.h  elite_tetris_agent.h  elite_tetris_block.h  template.h  tetris.cpp  tetris.h  tetrisAgent.cpp  tetrisAgent.h
(+246 files in other folders)
