idf_component_register(SRCS "main.c" INCLUDE_DIRS "."
                "../elite_components"
                "../elite_components/elite_io"
                "../elite_components/elite_display"
                "../elite_components/elite_shell"
                "../elite_components/elite_pixel_game_ente"
                "../elite_components/elite_pixel_applications"
                "../elite_components/elite_pixel_applications/elite_pixel_app_bare_minimum_template"
                "../elite_components/elite_pixel_applications/elite_rain"
                "../elite_components/elite_pixel_applications/elite_spriteshow"
                "../elite_components/elite_pixel_applications/elite_tetris"
                "../elite_components/elite_pixel_applications/line_of_sight_demo"
                "../elite_components/elite_pixel_applications/elite_pinball"
                "../elite_components/elite_pixel_applications/elite_snake"
                "../elite_components/elite_pixel_applications/tetr1s_reloaded"
                "../elite_components/elite_pixel_applications/elite_matrix_rain"
                "../elite_components/elite_pixel_applications/elite_fireworks"   
                    EMBED_FILES "favicon.ico" "upload_script.html")
